<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Memoir</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_plus_add">Add</string>
    <string name="add_restaurent">Restaurant</string>
    <string name="add_place">Place (Miscellaneous)</string>
    <string name="add_trip">Trip</string>
    <string name="add_hotel">Hotel</string>
    <string name="add_flight">Flight</string>
    <string name="rest_name">Restaurant Name</string>
    <string name="place_name">Place Name</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="flight_name">Flight Name</string>
    <string name="trip_name">Trip Name</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="save_to_trip">Save &amp; Add to Trip</string>
    <string name="address">Address</string>
    <string name="comment">Additional Comment</string>
    <string name="do_u_like">Did you like it?</string>
    
    <string name="all">ALL</string>
    <string name="trip">TRIP</string>
    <string name="restaurent">RESTAURANT</string>
    <string name="place">PLACE</string>
    <string name="hotel">HOTEL</string>
    <string name="flight">FLIGHT</string>
    
     <string name="add__tittle">Add a</string>
    <string name="add__tittle_flight">Add FLIGHT</string>
    <string name="add__tittle_trip">Add TRIP</string>
    <string name="add__tittle_restaurant">Add RESTAURANT</string>
    <string name="add__tittle_hotel">Add HOTEL</string>
    <string name="add__tittle_place">Add PLACE</string>

    
    <string name="did_you_like_it">Did you like it?</string>
    <string name="i_liked_it">I liked it</string>
    <string name="i_didnt_like_it">I didn\'t like it</string>
    
    
    <string-array name="colorList">
   		<item >Black</item>
        <item >White</item>
        <item >Red</item>
        <item >Blue</item>
        <item >Yellow</item>
        <item >Green</item>
        <item >Brown</item>
        <item >Pink</item>
        <item >Orange</item>
        <item >Purple</item>
    </string-array>
    
    
</resources>