<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/add_background" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/hotel_name"
            android:textColor="@color/add_text_color"
            android:textSize="@dimen/add_heading" />

        <EditText
            android:id="@+id/hotel_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:singleLine="true"
            android:textColor="@color/add_edit_text_color"
            android:textSize="@dimen/add_fill" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hotel_name"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/date_time"
            android:textColor="@color/add_text_color"
            android:textSize="@dimen/add_heading" />

        <TextView
            android:id="@+id/hotel_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/add_edit_text_color"
            android:textSize="@dimen/add_fill" />

        <Button
            android:id="@+id/hotel_edit_date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/hotel_date"
            android:layout_below="@+id/date"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/hotel_date"
            android:background="@color/transparent"
            android:text="@string/edit"
            android:visibility="gone" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hotel_date"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/address"
            android:textColor="@color/add_text_color"
            android:textSize="@dimen/add_heading" />

        <EditText
            android:id="@+id/hotel_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address"
            android:maxLines="3"
            android:textColor="@color/add_edit_text_color"
            android:textSize="@dimen/add_fill" />

        <TextView
            android:id="@+id/likeOrNot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hotel_address"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/do_u_like"
            android:textColor="@color/add_text_color"
            android:textSize="@dimen/add_heading" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/likeOrNot"
            android:textSize="@dimen/add_fill" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/comment"
            android:textColor="@color/add_text_color"
            android:textSize="@dimen/add_heading" />

        <EditText
            android:id="@+id/hotel_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/comment"
            android:maxLines="15"
            android:textColor="@color/add_edit_text_color"
            android:textSize="@dimen/add_fill" />

        <Button
            android:id="@+id/hotel_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hotel_comment"
            android:layout_marginBottom="16dip"
            android:layout_marginTop="10dip"
            android:layout_toLeftOf="@+id/hotel_saveToTrip"
            android:background="@drawable/save_button_bg"
            android:padding="6dip"
            android:text="@string/save"
            android:textColor="@color/add_text_color" />

        <Button
            android:id="@+id/hotel_saveToTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/hotel_comment"
            android:layout_marginBottom="16dip"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/save_button_bg"
            android:padding="6dip"
            android:text="@string/save_to_trip"
            android:textColor="@color/add_text_color" />
    </RelativeLayout>

</ScrollView>